# kekse

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  matrix.yml  release.yml
crates/keksbruch/: .gitignore  Cargo.toml  NOTICE  README.md
crates/keksbruch/fixtures/: PROTOCOL.md  package-lock.json  package.json  parse_cookies.c  parse_cookies.go  parse_cookies.js  parse_cookies.php  parse_cookies.py  parse_cookies_c.sh  parse_cookies_nginx.lua  parse_setcookie_browsers.py  parse_setcookie_clients.py  requirements.txt  router.php
crates/keksbruch/fixtures/browsers/: Dockerfile
crates/keksbruch/fixtures/dotnet/: Program.cs  parse_cookies.csproj
crates/keksbruch/fixtures/java/: pom.xml
crates/keksbruch/fixtures/java/src/main/java/: Sidecar.java
crates/keksbruch/fixtures/java/src/main/resources/: sidecar-versions.properties
crates/keksbruch/fixtures/lua/resty/: cookie.lua
crates/keksbruch/src/: invariants.rs  lib.rs  probe.rs  recipe.rs  reference.rs  scenario.rs  taxonomy.rs
crates/keksbruch/src/differential/: calibration.rs  cookie_matrix.md.tera  matrix.css  matrix.rs  mod.rs  result.rs  rust_comparators.rs  sidecar.rs  table.rs
crates/keksbruch/tests/: date_formatters.rs  keksbruch_layer_a.rs  property_invariants.proptest-regressions  property_invariants.rs  test-suite.rs
crates/kekse/: Cargo.toml  README.md
crates/kekse/benches/: allocs.rs  codec.rs
crates/kekse/benches/common/: mod.rs
crates/kekse/examples/: axum_extractor.rs  build_set_cookie.rs  encodings.rs  fail_soft.rs  parse_request.rs  strict_vs_lenient.rs
crates/kekse/src/: attributes.rs  axum.rs  cookie.rs  date.rs  encoding.rs  grammar.rs  jar.rs  lib.rs  report.rs  same_site.rs  set_cookie.rs  store.rs  wire.rs
crates/kekse/tests/: axum.rs  extractor.rs  rfc6265_cookie_header.rs  rfc6265_cookie_octet.rs  rfc6265_set_cookie_parsing.rs  rfc7230_token.rs  rfc7231_http_date.rs  samesite.rs  store.rs
crates/kekse/tests/common/: mod.rs
crates/rfc_6265/: Cargo.toml  README.md
crates/rfc_6265/src/: date.rs  domain.rs  grammar.rs  lib.rs  path.rs
crates/rfc_6265/tests/: property_invariants.rs  rfc6265_cookie_date.rs
