[package]
name = "keksbruch"
description = "Differential cookie-wire test harness for kekse — its chaos monkey for robustness and cross-implementation compliance."
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
# Explicitly unpublishable: keksbruch is the differential test harness (it path-deps
# kekse and pulls edition-2024 differential crates), never a crates.io artifact.
publish = false
rust-version.workspace = true

[dependencies]
# The system under test. Path dep so keksbruch always exercises the local tree.
kekse = { path = "../kekse" }
# RFC 6265 byte-class constants (e.g. `is_ctl`) for the universal invariants — one shared
# definition rather than an ad-hoc inline pool of control bytes — plus the `date` feature's
# HTTP-date formatters, used to build and pin `Expires` payloads in a selected variant.
rfc_6265 = { path = "../rfc_6265", features = ["date"] }

# --- differential harness (opt-in; never built on the default / MSRV CI legs) ---
# All optional and gated behind `differential`: the matrix is opt-in tooling, so
# its dependency tree stays out of the default `cargo test` and MSRV CI legs.
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
cookie = { workspace = true, optional = true }
biscotti = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
# cookie_store: a Rust client cookie-jar comparator; url builds the request URL it
# validates Set-Cookie domain-match against.
cookie_store = { workspace = true, optional = true }
url = { workspace = true, optional = true }
csv = { workspace = true, optional = true }
# Entity-encode untrusted cell content for the matrix's HTML report.
html-escape = { workspace = true, optional = true }
# Only to build the HeaderMap the axum-extra extractor reads from.
http = { workspace = true, optional = true }
# The matrix report's renderer: `tera` splices precompiled table/list fragments into the
# one prose template, `pulldown-cmark` converts that template's prose to HTML for the HTML
# report, and `maud` builds the table/list fragments as escape-by-default HTML.
tera = { workspace = true, optional = true }
pulldown-cmark = { workspace = true, optional = true }
maud = { workspace = true, optional = true }

[features]
default = []
# The opt-in cross-language differential matrix: the JSONL sidecar protocol and
# the in-process Rust comparators. Enabled only for the local matrix run and the
# compile-only `--all-features` clippy leg — never the default `cargo test`.
differential = [
    "dep:serde",
    "dep:serde_json",
    "dep:base64",
    "dep:cookie",
    "dep:biscotti",
    "dep:axum-extra",
    "dep:cookie_store",
    "dep:url",
    "dep:http",
    "dep:csv",
    "dep:html-escape",
    "dep:tera",
    "dep:pulldown-cmark",
    "dep:maud",
]
# Build the system under test (kekse) with its Domain-hardening suite, so Layer A asserts the
# enforced behaviour (public-suffix / malformed-IDN `Domain`s refused) rather than the pure codec.
hardened = ["kekse/hardened"]

[dev-dependencies]
# Layer A asserts the Set-Cookie HeaderValue gate rejects injection that a raw
# attribute value could carry; kekse already pulls http transitively.
http = { workspace = true }
# The generative layer: random and structured-mutation wire fed through the same
# universal invariants Layer A pins on the curated corpus. Stable-toolchain, so it
# runs inside the sealed CI test legs; bounded case counts keep it fast.
proptest = { workspace = true }
