[package]
name = "kekse"
description = "A strict, dependency-light cookie codec: a Set-Cookie builder and a Cookie-header parser built on the RFC 6265 grammar."
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/kekse"
keywords = ["cookie", "http", "rfc6265", "set-cookie", "codec"]
categories = ["web-programming", "encoding", "network-programming"]

# docs.rs builds with every feature, so the optional `axum` extractor and the
# `tracing` integration show up in the rendered docs. CI's `doc` leg already
# builds `--all-features` with `-D warnings`, so this stays in sync.
[package.metadata.docs.rs]
all-features = true

[dependencies]
# RFC 7230 token grammar for cookie-names (no homemade table).
http.workspace = true
# Percent-encoding primitive; the RFC 6265 cookie-value set is defined on top.
percent-encoding.workspace = true
# `Expires` dates: RFC 6265 §5.1.1 / RFC 7231 IMF-fixdate parsing and formatting.
time.workspace = true
# Optional debug-level logging of skipped/ignored pieces, behind the `tracing`
# feature so the core stays dependency-light (no logging facade by default).
tracing = { workspace = true, optional = true }
# Optional axum request extractor (`CookieJarBuf`), behind the `axum` feature.
# Only `axum-core` — not the whole `axum` — so the feature stays light; it is the
# same `FromRequestParts` trait `axum` re-exports.
axum-core = { workspace = true, optional = true }

[features]
default = []
# Emit debug-level `tracing` for the fail-soft parse skips.
tracing = ["dep:tracing"]
# axum `FromRequestParts` extractor (`CookieJarBuf`) for the request `Cookie:` header.
axum = ["dep:axum-core"]

[dev-dependencies]
# Integration tests drive kekse through real axum request/response types.
# All already first-party workspace deps — dev-only, nothing new for consumers.
axum.workspace = true
tower = { workspace = true, features = ["util"] }
tokio = { workspace = true }
# `time` is also a normal dependency; repeated here so the integration date suite
# can construct `OffsetDateTime`s with the `datetime!` macro.
time.workspace = true
