[package]
name = "kekse"
description = "A strict, dependency-light cookie codec: a Set-Cookie builder and a Cookie-header parser built on the RFC 6265 grammar."
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/kekse"
keywords = ["cookie", "http", "rfc6265", "set-cookie", "codec"]
categories = ["web-programming", "encoding", "network-programming"]

# docs.rs builds with every feature, so the optional `axum` extractor and the
# `tracing` integration show up in the rendered docs. CI's `doc` leg already
# builds `--all-features` with `-D warnings`, so this stays in sync.
[package.metadata.docs.rs]
all-features = true

[dependencies]
# RFC 6265 primitives — the grammar byte-classes (cookie-octet / av-octet / token) and the
# `Expires` date codec. The single, thoroughly tested source of truth for the bits and bytes;
# its `date` feature pulls `time`, so kekse never depends on `time` directly.
rfc_6265 = { path = "../rfc_6265", version = "0.1.1", features = ["date"] }
# `http::HeaderValue` for the typed-header conversions.
http.workspace = true
# Percent-encoding primitive; the RFC 6265 cookie-value codec is defined on top.
percent-encoding.workspace = true
# Optional debug-level logging of skipped/ignored pieces, behind the `tracing`
# feature so the core stays dependency-light (no logging facade by default).
tracing = { workspace = true, optional = true }
# Optional axum request extractor (`CookieJarBuf`), behind the `axum` feature.
# Only `axum-core` — not the whole `axum` — so the feature stays light; it is the
# same `FromRequestParts` trait `axum` re-exports.
axum-core = { workspace = true, optional = true }

[features]
default = []
# Emit debug-level `tracing` for the fail-soft parse skips.
tracing = ["dep:tracing"]
# axum `FromRequestParts` extractor (`CookieJarBuf`) for the request `Cookie:` header.
axum = ["dep:axum-core"]
# Reject public-suffix `Domain`s (supercookie defense) via rfc_6265's Public Suffix List.
# Like `idna`, also gates `Domain` on LDH host-name syntax first (see `Domain::new`).
psl = ["rfc_6265/psl"]
# Validate internationalized `Domain`s (reject malformed punycode) via rfc_6265's IDNA.
# Like `psl`, also gates `Domain` on LDH host-name syntax first (see `Domain::new`).
idna = ["rfc_6265/idna"]
# The full Domain-hardening suite. Opt-in (not in the default, dependency-light codec); pulls the
# `psl`/`idna` trees and may carry a higher MSRV than the 1.88 core.
hardened = ["psl", "idna"]

[dev-dependencies]
# Integration tests drive kekse through real axum request/response types.
# All already first-party workspace deps — dev-only, nothing new for consumers.
axum.workspace = true
tower = { workspace = true, features = ["util"] }
tokio = { workspace = true }
# `time` (pulled transitively via rfc_6265's `date` feature) so the integration date suite can
# construct `OffsetDateTime`s with the `datetime!` macro.
time.workspace = true
# Micro-benchmarks for the codec hot paths (benches/codec.rs).
criterion.workspace = true

# The `CookieJarBuf` extractor lives behind the `axum` feature, so its example only
# builds with that feature on (the other examples are feature-free and auto-discovered).
# `--all-targets --all-features` in CI compiles it; a default build skips it.
[[example]]
name = "axum_extractor"
required-features = ["axum"]

# Both benches bring their own `main` (criterion's runner, and a plain binary
# for the allocation counts), so libtest's harness is off. Always run them by
# name — `cargo bench -p kekse --bench codec` — so criterion's CLI flags never
# reach a libtest harness, which would reject them.
[[bench]]
name = "codec"
harness = false

[[bench]]
name = "allocs"
harness = false
